--- a/cat1.html
+++ b/cat1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>묘한 고양이</title>
-    <link rel="icon" href="cat/icon.png" type="image/x-icon">
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="cat.css">
 </head>
 <body background="bg2-1.jpg">
@@ -68,7 +68,7 @@
                                 <p class="text-title1-1 text-center text-sl text-brown text-kr2 ">◇ 한반도 진출기</p>
                             </div>
                             <div class="col-7">
-                                <img src="cat/pg1Main.png" alt="">
+                                <img src="pg1Main.png" alt="">
                             </div>
                         </div>
                     </section>
@@ -126,7 +126,7 @@
                         <div class="row">
                             <div class="col-3"></div>
                             <div class="col-6">
-                                <img src="cat/pg1Im2.png" alt="">
+                                <img src="pg1Im2.png" alt="">
                             </div>
                         </div>
                     </section>
