--- a/cat3.html
+++ b/cat3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>묘한 고양이</title>
-    <link rel="icon" href="cat/icon.png" type="image/x-icon">
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="cat.css">
 </head>
 
@@ -68,7 +68,7 @@
                         <p class="text-title1-1 text-center text-sl text-brown text-kr2 ">◇ 역사 속 고양이</p>
                     </div>
                     <div class="col-7">
-                        <img src="cat/pg3Main-1.png" alt="">
+                        <img src="pg3Main-1.png" alt="">
                     </div>
                 </div>
             </section>
@@ -114,7 +114,7 @@
                     <div class="col-2"></div>
                     <div class="col-3">
                         <div class="h-40"></div>
-                        <img src="cat/pg3Im1.png" alt="">
+                        <img src="pg3Im1.png" alt="">
                     </div>
                     <section>
                         <div class="h-128"></div>
@@ -156,7 +156,7 @@
                     </section>
                     <div class="col-3">
                         <div class="h-90"></div>
-                        <img src="cat/pg3Im2.png" alt="">
+                        <img src="pg3Im2.png" alt="">
                     </div>
                 </div>
             </section>
@@ -181,7 +181,7 @@
                     <div class="col-2"></div>
                     <div class="col-3">
                         <div class="h-40"></div>
-                        <img src="cat/pg3Im3.png" alt="">
+                        <img src="pg3Im3.png" alt="">
                     </div>
                         
                     <section>
@@ -228,7 +228,7 @@
 
                     <div class="col-3">
                         <div class="h-90"></div>
-                        <img src="cat/pg3Im4.png" alt="">
+                        <img src="pg3Im4.png" alt="">
                     </div>
                 </div>
             </section>
