--- a/cat4.html
+++ b/cat4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>묘한 고양이</title>
-    <link rel="icon" href="cat/icon.png" type="image/x-icon">
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="cat.css">
 
 </head>
@@ -68,7 +68,7 @@
                         <p class="text-title1-1 text-center text-sl text-brown text-kr2 ">◇ 예술 속 고양이</p>
                     </div>
                     <div class="col-7">
-                        <img src="cat/pg5Im1-1.png" alt="">
+                        <img src="pg5Im1-1.png" alt="">
                     </div>
                 </div>
             </section>
@@ -112,7 +112,7 @@
                     <div class="col-2"></div>
                     <div class="col-3">
                         <div class="h-90"></div>
-                        <img src="cat/pg5Im2.png" alt="">
+                        <img src="pg5Im2.png" alt="">
                     </div>
                     <section>
                         <div class="h-170"></div>
@@ -130,11 +130,11 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-8">
-                        <img src="cat/pg5Im3.png" alt="">
+                        <img src="pg5Im3.png" alt="">
                         <div class="h-5"></div>
                         <p class="text-title2 text-brown text-kr3 "><묘작도></p>
                         <div class="h-20"></div>
-                        <img src="cat/pg5Im3-1.png" alt="">
+                        <img src="pg5Im3-1.png" alt="">
                         <div class="h-5"></div>
                         <p class="text-title2 text-brown text-kr3 "><다양한 고양이 그림></p>
                         
@@ -162,11 +162,11 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4">
-                        <img src="cat/pg5Im4-1.jpg" alt="">
+                        <img src="pg5Im4-1.jpg" alt="">
                     </div>
                     <div class="col-4">
                         <div class="h-20"></div>
-                        <img src="cat/pg5Im4-2.jpg" alt="">
+                        <img src="pg5Im4-2.jpg" alt="">
                         <div class="h-26"></div>
                         <p class="text-title text-brown text-kr2">김득신</p>
                         <div class="h-5"></div>
@@ -184,7 +184,7 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4">
-                        <img src="cat/pg5Im4.jpg" alt="">
+                        <img src="pg5Im4.jpg" alt="">
                     </div>
                     <div class="col-4">
                         <div class="h-140"></div>
@@ -212,7 +212,7 @@
                     <div class="col-2"></div>
                     <div class="col-3">
                         <div class="h-90"></div>
-                        <img src="cat/pg5Im5.png" alt="">
+                        <img src="pg5Im5.png" alt="">
                     </div>
                     <section>
                         <div class="h-205"></div>
@@ -290,7 +290,7 @@
                     <div class="col-2"></div>
                     <div class="col-3">
                         <div class="h-90"></div>
-                        <img src="cat/pg5Im5-1.png" alt="">
+                        <img src="pg5Im5-1.png" alt="">
                     </div>
                     <section>
                         <div class="h-185"></div>
