--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>묘한 고양이</title>
-    <link rel="icon" href="cat/icon.png" type="image/x-icon">
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="cat.css">
 </head>
 
@@ -15,7 +15,7 @@
         <section>
             <div class="row">
                 <div class="col-12">
-                    <img src="cat/mainPg.jpg" alt="">
+                    <img src="mainPg.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-3"></div>
                     <div class="col-6">
-                        <img src="cat/mianCat1-1.png" alt="">
+                        <img src="mianCat1-1.png" alt="">
                     </div>
                     <div class="col-1">
                         <p class="text-title1 text-left text-kr2 text-brown">◇ 어여쁜 고양이</p>
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                     <div class="col-2">
-                        <img class="image-fit1" src="cat/mianCat2.png" alt="">
+                        <img class="image-fit1" src="mianCat2.png" alt="">
 
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     </div>
 
                     <div class="col-4">
-                        <img class= image-center src="cat/mianCat3-1.png" alt="">
+                        <img class= image-center src="mianCat3-1.png" alt="">
                     </div>
                     
                     <div class="col-2">
